--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -28,7 +28,7 @@
   </div>
 <% end %>
 
-<div class="clear"></div>
+<div class="clear gap"></div>
 
 <% if params[:search] != nil %>
   <p>Your search for "<%= params[:search] %>" yielded <%= @events.count %> result<%= @events.count != 1 ? "s" : "" %>.</p>
