--- a/app/views/html/_footer.html.erb
+++ b/app/views/html/_footer.html.erb
@@ -1,6 +1,6 @@
-</div> <!-- body from header -->
+<div class="clear gap"></div>
 
-<div class="clear"></div>
+</div> <!-- body from header -->
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
