--- a/app/views/static_pages/users.html.erb
+++ b/app/views/static_pages/users.html.erb
@@ -1,15 +1,19 @@
 <h1>Users</h1>
 
-<div class="form-wrapper">
-  <%= form_tag("/users", method: :get, class: "form") do %>
-    <div class="field">
-      <%= text_field_tag(:search, params[:search]) %>
-    </div>
-    <div class="actions">
-      <%= submit_tag ("Search") %>
-    </div>
-  <% end %>
+<div class="col-xs-12 col-md-12">
+  <div class="form-wrapper">
+    <%= form_tag("/users", method: :get, class: "form") do %>
+      <div class="field col-xs-8">
+        <%= text_field_tag(:search, params[:search]) %>
+      </div>
+      <div class="actions col-xs-4">
+        <%= submit_tag ("Search") %>
+      </div>
+    <% end %>
+  </div>
 </div>
+
+<div class="clear gap"></div>
 
 <% if params[:search] != nil %>
     <p>Your search for "<%= params[:search] %>" yielded <%= @users.count %> user<%= @users.count != 1 ? "s" : "" %>.</p>
