distances now working
- distances added to events for users whose coordinates are set
- admin search for users by real name fixed
- allusers page reintroduced for admin
- username shown in edit user page for standard users

--- a/app/views/admin_pages/admin.html.erb
+++ b/app/views/admin_pages/admin.html.erb
@@ -15,7 +15,7 @@
 
     <tr>
       <td>
-        <%= link_to 'All Users', "/users", :role=>"button", :class => "btn btn-warning mb-2" %><br>
+        <%= link_to 'All Users', "/allusers", :role=>"button", :class => "btn btn-warning mb-2" %><br>
         <%= link_to 'All Events', events_path, :role=>"button", :class => "btn btn-info mb-2"%><br>
         <%= link_to 'All Comments', comments_path, :role=>"button", :class => "btn btn-info mb-2" %><br>
         <%= link_to 'All Reviews', reviews_path, :role=>"button", :class => "btn btn-info mb-2" %><br>
