new font and fixes
- added Lato font
- changed # urls to Javascript:void
- replaced clears with bootstrap rows
- hid carousel when empty

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,152 +1,76 @@
-@import "fonts.scss"; //montserrat and open sans
-
-.navbar-header {
-  margin:auto !important;
-}
+@import "fonts.scss";
 
 .navbar-brand {
-  font-family: 'Montserrat', sans-serif;
-  text-transform: uppercase;
 }
-
 .navbar {
   .nav {
-    font-family: 'Open Sans', sans-serif;
-    text-transform: uppercase;
     letter-spacing: 3px;
     font-size: 1.2rem;
-    max-width:100%;
+    max-width: 100%;
   }
 }
-
 .navbar-inverse {
-  background-color: #FFF;
+  background-color: #333;
 }
-
 .navbar-collapse {
   max-height: none !important;
 }
-
-.navbar-inverse .navbar-nav>.active>a:hover,
-.navbar-inverse .navbar-nav>li>a:hover,
-.navbar-inverse .navbar-nav>li>a:focus {
-  background-color: #EEE;
-}
-
-.navbar-inverse .navbar-nav>.active>a,
-.navbar-inverse .navbar-nav>.open>a,
-.navbar-inverse .navbar-nav>.open>a,
-.navbar-inverse .navbar-nav>.open>a:hover,
-.navbar-inverse .navbar-nav>.open>a,
-.navbar-inverse .navbar-nav>.open>a:hover,
-.navbar-inverse .navbar-nav>.open>a:focus {
-  background-color: #FFF;
-}
-
-.dropdown-menu {
-  background-color: #FFF;
-}
-
-.dropdown-menu>li>a:hover,
-.dropdown-menu>li>a:focus {
-  background-color: #EEE;
-}
-
 .navbar-inverse {
   background-image: none;
-}
-
-.dropdown-menu>li>a:hover,
-.dropdown-menu>li>a:focus {
-  background-image: none;
-}
-
-.navbar-inverse {
   border-color: #CCC;
-}
-
-.navbar-inverse .navbar-brand {
-  color: #191919;
-}
-
-.navbar-inverse .navbar-brand:hover {
-  color: #191919;
-}
-
-.navbar-inverse .navbar-nav>li>a {
-  color: #191919;
-  font-size:14px;
-}
-
-.navbar-inverse .navbar-nav>li>a:hover,
-.navbar-inverse .navbar-nav>li>a:focus {
-  color: #191919;
-}
-
-.navbar-inverse .navbar-nav>.active>a,
-.navbar-inverse .navbar-nav>.open>a,
-.navbar-inverse .navbar-nav>.open>a:hover,
-.navbar-inverse .navbar-nav>.open>a:focus {
-  color: #191919;
-}
-
-.navbar-inverse .navbar-nav>.active>a:hover,
-.navbar-inverse .navbar-nav>.active>a:focus {
-  color: #191919;
-}
-
-.dropdown-menu>li>a {
-  color: #191919;
-}
-
-.dropdown-menu>li>a:hover,
-.dropdown-menu>li>a:focus {
-  color: #191919;
-}
-
-.navbar-inverse .navbar-nav>.dropdown>a .caret {
-  border-top-color: #191919;
-}
-
-.navbar-inverse .navbar-nav>.dropdown>a:hover .caret {
-  border-top-color: #191919;
-}
-
-.navbar-inverse .navbar-nav>.dropdown>a .caret {
-  border-bottom-color: #191919;
-}
-
-.navbar-inverse .navbar-nav>.dropdown>a:hover .caret {
-  border-bottom-color: #191919;
-}
-
-.navbar-toggle {
-  background-color:#333 !important;
-}
-
-
-.dropdown {
-  position: relative;
-  display: inline-block;
+  .navbar-nav {
+    >li {
+      >a {
+        color: #FFF;
+        font-size: 14px;
+        .caret {
+          border-top-color: #FFF;
+          border-bottom-color: #FFF;
+        }
+        &:hover, &:focus, .active {
+          background-color: #DDD;
+          color: #333;
+          .caret {
+            border-top-color: #333;
+            border-bottom-color: #333;
+          }
+        }
+      }
+    }
+  }
 }
 .dropdown-menu {
+  background-color: #DDD;
+  color: #333;
   display: none;
   position: absolute;
   z-index: 1;
+  li a {
+    &:hover, &:focus {
+      background-color: #EEE;
+      background-image: none;
+    }
+  }
 }
-.dropdown:hover .dropdown-menu {
-  display: block;
+.navbar-toggle {
+  background-color: #333 !important;
 }
-
+.dropdown {
+  position: relative;
+  display: inline-block;
+  &:hover {
+    .dropdown-menu {
+      display: block;
+    }
+  }
+}
 a.navbar-brand {
-    margin:0px;
-    padding:0px;
+  margin: 0px;
+  padding: 0px;
 }
-
 img.logo {
-    width:150px;
+  width: 150px;
 }
-
 li.blue {
-  background-color:#CCC;
+  background-color: #CCC;
 }
