--- a/app/views/html/_footer.html.erb
+++ b/app/views/html/_footer.html.erb
@@ -8,10 +8,10 @@
   <div>
     <p>Copyright 2020 &copy; FriendMeter</p>
       <div id="social">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-google"></a>
-        <a href="#" class="fa fa-linkedin"></a>
-        <a href="#" class="fa fa-youtube"></a>
+        <a href="javascript:void(0);" class="fa fa-facebook"></a>
+        <a href="javascript:void(0);" class="fa fa-google"></a>
+        <a href="javascript:void(0);" class="fa fa-linkedin"></a>
+        <a href="javascript:void(0);" class="fa fa-youtube"></a>
       </div>
   </div>
 </footer>
