--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,8 +26,12 @@ html, body {
     height:100%;
 }
 
+a {
+  cursor: pointer;
+}
+
 body {
-    font-family:"Cambria", "Open Sans";
+    font-family: Lato, sans-serif;
 }
 
 #body {
@@ -38,6 +42,11 @@ body {
     min-height:100%;
     position:relative;
     margin-top:58px;
+}
+
+.row {
+  max-width: 100%;
+  margin: auto;
 }
 
 .clear {
