--- a/app/views/html/_header.html.erb
+++ b/app/views/html/_header.html.erb
@@ -1,4 +1,5 @@
 <div id="container"><!-- ended in footer -->
+
   <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
     <div class="container">
       <div class="navbar-header">
@@ -17,7 +18,7 @@
           </li>
           
           <li class="dropdown">
-            <a href="#" class="dropbtn">Events <b class="caret"></b></a>
+            <a class="dropbtn">Events <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><%= link_to "All Events", "/events", class: "nav-link" %></li>
               <li><%= link_to "My Events", "/myevents", class: "nav-link" %></li>
@@ -35,7 +36,7 @@
               <%= link_to "Friends (" + current_user.friends.count.to_s + ")", "/friends", class: "nav-link" %>
             </li>
             <li class="dropdown">
-              <a href="#" class="dropbtn"><%= getName(current_user.id, current_user.id) %> <b class="caret"></b></a>
+              <a class="dropbtn"><%= getName(current_user.id, current_user.id) %> <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li>
                   <a href="/users/<%= current_user.id %>">View Profile</a>
@@ -75,4 +76,3 @@
   <%= javascript_pack_tag "nav" %>
   
   <div id="body">
-
